--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>com.github.saturnism.spring-boot-starter-grpc</groupId>
+                <artifactId>grpc-server-starter</artifactId>
+                <version>master-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib-jdk8</artifactId>
+                <version>${kotlin.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
