--- a/assortment-service/src/main/resources/application.properties
+++ b/assortment-service/src/main/resources/application.properties
@@ -2,3 +2,9 @@ server.port=6565
 grpc.server.port=6565
 spring.application.name=CakesAssortmentService
 eureka.instance.nonSecurePort=6565
+
+#Database
+spring.datasource.url=jdbc:postgresql://localhost/AssortmentService
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driverClassName=org.postgresql.Driver
