--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <properties>
         <spring.boot.version>2.2.1.RELEASE</spring.boot.version>
         <spring.cloud.version>Hoxton.RELEASE</spring.cloud.version>
+        <java.version>1.8</java.version>
+        <kotlin.version>1.3.50</kotlin.version>
     </properties>
 
     <dependencyManagement>
