--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
 
     <modules>
         <module>eureka-server</module>
+        <module>assortment-proto</module>
         <module>assortment-service</module>
+        <module>assortment-client</module>
+        <module>order-proto</module>
         <module>order-service</module>
     </modules>
 
@@ -27,6 +30,7 @@
         <spring.boot.version>2.2.1.RELEASE</spring.boot.version>
         <spring.cloud.version>Hoxton.RELEASE</spring.cloud.version>
         <java.version>1.8</java.version>
+        <io.grpc.version>1.25.0</io.grpc.version>
         <kotlin.version>1.3.50</kotlin.version>
     </properties>
 
@@ -59,14 +63,5 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
