Added assortment service client

--- a/assortment-service/src/main/resources/application.properties
+++ b/assortment-service/src/main/resources/application.properties
@@ -2,10 +2,10 @@ server.port=6565
 grpc.server.port=6565
 spring.application.name=CakesAssortmentService
 eureka.instance.nonSecurePort=6565
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
 
 #Database
-spring.datasource.url=jdbc:postgresql://localhost/AssortmentService
+spring.datasource.url=jdbc:postgresql://postgresql/AssortmentService
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
