--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,20 @@ services:
       - cakestorenet
     links:
       - postgresql
+  order-service:
+    image: order-service
+    container_name: order-service
+    build: ./order-service/
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+    depends_on:
+      - postgresql
+      - eureka-server
+    networks:
+      - cakestorenet
+    links:
+      - postgresql
   eureka-server:
     image: eureka-server
     container_name: eureka-server
