--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -95,6 +95,11 @@
             <artifactId>order-proto</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>assortment-proto</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
