--- a/assortment-service/src/main/resources/application.properties
+++ b/assortment-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=6565
-grpc.server.port=6565
+grpc.port=6565
 spring.application.name=CakesAssortmentService
 eureka.instance.nonSecurePort=6565
 eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
