Hotfix: local addresses

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -2,10 +2,10 @@ server.port=9090
 grpc.port=9090
 spring.application.name=CakesOrderService
 eureka.instance.nonSecurePort=9090
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
 
 #Database
-spring.datasource.url=jdbc:postgresql://localhost/OrderService
+spring.datasource.url=jdbc:postgresql://postgresql/OrderService
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
